src/objects/Application__c.object
<CustomObject>
    <fields>
        <fullName>Self_Reported_English_Proficiency_Score__c</fullName>
        <description>EASY Application</description>
        <label>Self-Reported English Proficiency Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Self_Reported_English_Proficiency__c</fullName>
        <description>From EASY Application</description>
        <label>Self-Reported English Proficiency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Self_Reported_GMAT__c</fullName>
        <description>From EASY Application</description>
        <label>Self-Reported GMAT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Self_Reported_GRE__c</fullName>
        <description>From EASY Application</description>
        <label>Self-Reported GRE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Self_Reported_Graduation_Date__c</fullName>
        <description>From EASY Application</description>
        <inlineHelpText>Graduation Date/Expected Graduation Date:</inlineHelpText>
        <label>Self-Reported Graduation Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Self_Reported_SAT__c</fullName>
        <description>From EASY application</description>
        <inlineHelpText>Highest composite</inlineHelpText>
        <label>Self-Reported SAT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Attitude__c</fullName>
        <label>zzService Attitude</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sites__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sites</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Ethos__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Sites</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Ethos__c</referenceTo>
        <relationshipLabel>Applications (Sites)</relationshipLabel>
        <relationshipName>Applications4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sleep_Habit__c</fullName>
        <description>From EASY Application</description>
        <label>zzRoommate Sleep Habit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Morning person</fullName>
                </value>
                <value>
                    <fullName>Night owl</fullName>
                </value>
                <value>
                    <fullName>No preference</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Student_Type__c</fullName>
        <description>Type of the student applying.</description>
        <label>Student Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Student_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Study_Habits__c</fullName>
        <description>From EASY application</description>
        <label>zzStudy Habits</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submitted_Date__c</fullName>
        <description>Date Application was submitted</description>
        <inlineHelpText>Submitted Date</inlineHelpText>
        <label>Submitted Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suffix__c</fullName>
        <description>Custom field to hold Applicant&apos;s response</description>
        <label>Suffix</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Jr.</fullName>
                </value>
                <value>
                    <fullName>M.D.</fullName>
                </value>
                <value>
                    <fullName>PA</fullName>
                </value>
                <value>
                    <fullName>PE</fullName>
                </value>
                <value>
                    <fullName>R.D.</fullName>
                </value>
                <value>
                    <fullName>R.N.</fullName>
                </value>
                <value>
                    <fullName>Sr.</fullName>
                </value>
                <value>
                    <fullName>II</fullName>
                </value>
                <value>
                    <fullName>III</fullName>
                </value>
                <value>
                    <fullName>IV</fullName>
                </value>
                <value>
                    <fullName>V</fullName>
                </value>
                <value>
                    <fullName>VI</fullName>
                </value>
                <value>
                    <fullName>VII</fullName>
                </value>
                <value>
                    <fullName>VIII</fullName>
                </value>
                <value>
                    <fullName>IX</fullName>
                </value>
                <value>
                    <fullName>X</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Territory_Management_Applicant_Type__c</fullName>
        <description>Maps granular Applicant Type values to the values used by the territory management system.</description>
        <formula>IF(ISPICKVAL(Applicant_Type__c, &apos;Freshman&apos;), &apos;Freshman&apos;, 
IF(ISPICKVAL(Applicant_Type__c, &apos;Transfer&apos;), &apos;Transfer&apos;, 
IF(ISPICKVAL(Applicant_Type__c, &apos;Graduate&apos;), &apos;Graduate&apos;, 
IF(ISPICKVAL(Applicant_Type__c, &quot;Master&apos;s&quot;), &apos;Graduate&apos;, 
IF(ISPICKVAL(Applicant_Type__c, &apos;Doctoral&apos;), &apos;Graduate&apos;, 
IF(ISPICKVAL(Applicant_Type__c, &apos;Graduate Certificate&apos;), &apos;Graduate&apos;, 
IF(ISPICKVAL(Applicant_Type__c, &apos;Undergraduate Certificate&apos;), &apos;Transfer&apos;, &apos;Unknown&apos;)))))))</formula>
        <inlineHelpText>Maps granular Applicant Type values to the values used by the territory management system.</inlineHelpText>
        <label>zzTerritory Management Applicant Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Summary__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Test Score Summary Object</description>
        <label>Test Summary</label>
        <referenceTo>Test_Summary__c</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Transfer_Credit_Official__c</fullName>
        <description>From EASY</description>
        <inlineHelpText>Use numbers, no letters</inlineHelpText>
        <label>Transfer Credit-Official</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Only used for test classes</description>
        <label>User Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VA_Beneficiary_Relationship__c</fullName>
        <label>VA Beneficiary Relationship</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>I am the beneficiary</fullName>
                </value>
                <value>
                    <fullName>I am the spouse of the beneficiary</fullName>
                </value>
                <value>
                    <fullName>I am a dependent of the beneficiary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VA_Chapter_Other__c</fullName>
        <label>VA Chapter Other</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VA_Chapter__c</fullName>
        <label>VA Chapter</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Chapter 1606</fullName>
                </value>
                <value>
                    <fullName>Chapter 1607</fullName>
                </value>
                <value>
                    <fullName>Chapter 30</fullName>
                </value>
                <value>
                    <fullName>Chapter 31</fullName>
                </value>
                <value>
                    <fullName>Chapter 33</fullName>
                </value>
                <value>
                    <fullName>Chapter 33 Yellow Ribbon</fullName>
                </value>
                <value>
                    <fullName>Chapter 35</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Veteran__c</fullName>
        <description>From EASY Application</description>
        <inlineHelpText>Have you served in the U.S. Armed Forces?</inlineHelpText>
        <label>Veteran?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Picklist</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Violation_Reason__c</fullName>
        <description>For EASY application</description>
        <label>Violation Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Visa_Needed__c</fullName>
        <description>This is to issue the correct type of visa for admitted students</description>
        <label>Visa Needed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>F1</fullName>
                </value>
                <value>
                    <fullName>J1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Withdrawal_Reason__c</fullName>
        <description>Reason the applicant withdrew the application</description>
        <label>Withdrawal Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Withdrawal_Reason</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Work_Ethic__c</fullName>
        <label>zzWork Ethic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Years_of_Experience__c</fullName>
        <description>From EASY Application</description>
        <label>Years of Experience</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1-9 years</fullName>
                </value>
                <value>
                    <fullName>10 or more years</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Application</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Intended_Program__c</columns>
        <columns>Intended_Term_of_Entry__c</columns>
        <columns>Application_Status__c</columns>
        <columns>Admission_Decision__c</columns>
        <columns>Generic_Filter_1__c</columns>
        <columns>Migration_Source__c</columns>
        <columns>Opportunity__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Contact__c</field>
            <operation>equals</operation>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Colleague</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Intended_Program__c</columns>
        <columns>Intended_Term_of_Entry__c</columns>
        <columns>Academic_Program__c</columns>
        <columns>Entry_Term__c</columns>
        <columns>Application_Status__c</columns>
        <columns>Applicant_Type__c</columns>
        <columns>Admission_Application_Type__c</columns>
        <columns>Admission_Decision__c</columns>
        <columns>Admission_Decision_Type__c</columns>
        <columns>ERP_Application_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Migration_Source__c</field>
            <operation>equals</operation>
            <value>Colleague</value>
        </filters>
        <label>Colleague</label>
    </listViews>
    <nameField>
        <displayFormat>A-{0000000}</displayFormat>
        <label>Application Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>